# augment-lite-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_CONFIG_EXAMPLE.json  Dockerfile  Makefile  README.md  README_ZH.md  RELEASE_v1.0.0_SUMMARY.md  TESTING.md  cache.py  docker-compose.yml  health_check.sh  mcp_bridge_lazy.py  pyproject.toml  requirements-lock.txt  requirements.txt  retry.py  router.py  semantic_cache.py  server.py  tokenizer.py
code/: __init__.py  pattern_search.py  references.py  symbols.py  tree_sitter_parser.py
config/: models.yaml  system_prompts.yaml
docker/: Dockerfile  README.md
file/: __init__.py  finder.py  reader.py
guardrails/: __init__.py  abstain.py  code_security.py  context_grounding.py  hallucination.py  pii_detection.py  prompt_cite.txt  prompt_injection.py  schema_validation.py  security_patterns.txt
memory/: longterm.py  tasks.py
postcheck/: code_checks.py
providers/: registry.py  system_prompts.py
retrieval/: accumulated_answer.py  auggie_client.py  build_index.py  build_vector_index.py  dual_search.py  incremental_indexer.py  iterative_search.py  multi_project.py  search.py  subagent_filter.py  unified_orchestrator.py  vector_search.py
scripts/: MANAGE_SH_UPDATE.md  demo_multi_project.sh  export_import.sh  install_vector_deps.sh  manage.sh  migrate_all.py  migrate_cache.py  migrate_memory.py  quickstart.sh  setup_new_machine.sh  test.sh  test_dynamic_max_tokens.py  test_mcp_apis.py  test_project_id.sh  update_version.sh
tests/: run_all_tests.py  run_new_tests.sh  test_ace_enhancements.py  test_all_mcp_apis.py  (+10 more)
web_ui/: README.md  main.py  pyproject.toml  requirements.txt  start.sh
web_ui/templates/: dashboard.html
(+6 files in other folders)
