[project]
name = "augment-lite-mcp"
version = "1.1.0"
description = "Local Augment-like context engine (RAG + memory + guardrails) with mixed routing: local proxies + Requesty (GPT-5 / Gemini), exposed as an MCP-like stdio service."
authors = [{name="You", email="you@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pyyaml",
    "duckdb",
    "rank-bm25"
]

[tool.ruff]
line-length = 100