[project]
name = "augment-lite-mcp"
version = "1.3.3"
description = "Local Augment-like context engine (RAG + memory + guardrails) with configurable LLM routing (GLM-4.7, MiniMax-M2.1, or custom providers via config/models.yaml), exposed as an MCP-like stdio service."
authors = [{name="You", email="you@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pyyaml",
    "duckdb",
    "rank-bm25"
]

[tool.ruff]
line-length = 100